Added source of code

--- a/Clustering/Clustering_se21m003_Goll_ToyDataset.ipynb
+++ b/Clustering/Clustering_se21m003_Goll_ToyDataset.ipynb
@@ -261,6 +261,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code samples have been taken from https://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_silhouette_analysis.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
