--- a/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_1mDataset.ipynb
+++ b/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_1mDataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -115,7 +115,7 @@
        "4     166      346       1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.dataset.DatasetAutoFolds at 0x227c9121670>"
+       "<surprise.dataset.DatasetAutoFolds at 0x227c2febe50>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -198,18 +198,18 @@
       "MSE: 0.9142\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.8997\n",
+      "MSE: 0.9091\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9139\n",
+      "MSE: 0.9107\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9240\n",
+      "MSE: 0.9157\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9039\n",
-      "Execution time: 21.79461121559143 seconds\n",
-      "Mean mse: 0.9111492801517241\n"
+      "MSE: 0.9108\n",
+      "Execution time: 19.49854016304016 seconds\n",
+      "Mean mse: 0.9120843895897578\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
    "source": [
     "The mean value of the results (mean squared errors) is listed above. The values are rather stable and don't vary significantly. They also show a high predict accuracy (high values of mse).\n",
     "\n",
-    "The algorithm performs well. Execution of all 5 splits is listed above in the coude output."
+    "The algorithm performs well. Execution of all 5 splits is listed above in the coude output. It was below 20 seconds for the 100k dataset."
    ]
   },
   {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,23 +263,23 @@
       "MSE: 0.9314\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9163\n",
+      "MSE: 0.9292\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9214\n",
+      "MSE: 0.9272\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9407\n",
+      "MSE: 0.9172\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9326\n",
-      "Execution time: 17.32087206840515 seconds\n",
-      "Mean mse: 0.9284606293091211\n"
+      "MSE: 0.9233\n",
+      "Execution time: 15.89564061164856 seconds\n",
+      "Mean mse: 0.918864230115619\n"
      ]
     }
    ],
    "source": [
-    "mse_results = []\n",
+    "rmse_results = []\n",
     "\n",
     "user_based = {'name': 'cosine',\n",
     "               'user_based': True} #defines if user-based filtering or items-based filtering should be used\n",
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mailb\\AppData\\Local\\Temp/ipykernel_24628/950404129.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "C:\\Users\\mailb\\AppData\\Local\\Temp/ipykernel_24628/4132256063.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  algo.fit(trainset)\n"
      ]
@@ -334,17 +334,17 @@
      "output_type": "stream",
      "text": [
       "MSE: 0.9329\n",
-      "MSE: 0.9158\n",
-      "MSE: 0.9244\n",
-      "MSE: 0.9106\n",
-      "MSE: 0.9355\n",
-      "Execution time: 11.120123386383057 seconds\n",
-      "Mean mse: 0.9238492771818676\n"
+      "MSE: 0.9287\n",
+      "MSE: 0.9519\n",
+      "MSE: 0.9486\n",
+      "MSE: 0.9256\n",
+      "Execution time: 10.747952461242676 seconds\n",
+      "Mean mse: 0.9282104467555625\n"
      ]
     }
    ],
    "source": [
-    "mse_results = []\n",
+    "rmse_results = []\n",
     "\n",
     "user_based = {'name': 'cosine',\n",
     "               'user_based': True} #defines if user-based filtering or items-based filtering should be used\n",
@@ -368,7 +368,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm is the most efficient. It takes the least amount of time to generate the model and test. However, it has a similar accuracy to the user based approach."
+    "This algorithm is the most efficient and precise one. The mean mse from 5 executions is higher than measured from the prior algorithms used. The execution time is also considerably faster.\n",
+    "\n",
+    "This method/algorithm seems to be the best among the tested."
    ]
   }
  ],
