--- a/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_100kDataset.ipynb
+++ b/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_100kDataset.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -115,7 +115,7 @@
        "4     166      346       1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.dataset.DatasetAutoFolds at 0x227c9121670>"
+       "<surprise.dataset.DatasetAutoFolds at 0x287073f44f0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -195,21 +195,21 @@
      "text": [
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9142\n",
+      "MSE: 0.8910\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.8997\n",
+      "MSE: 0.8769\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9139\n",
+      "MSE: 0.8928\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9240\n",
+      "MSE: 0.8894\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9039\n",
-      "Execution time: 21.79461121559143 seconds\n",
-      "Mean mse: 0.9111492801517241\n"
+      "MSE: 0.8770\n",
+      "Execution time: 26.100154161453247 seconds\n",
+      "Mean mse: 0.8853872252800996\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
     "start_time = time.time()\n",
     "\n",
     "for (trainset, testset) in datasets:\n",
-    "    algo = KNNWithMeans(20, 1, item_based)\n",
+    "    algo = KNNWithMeans(100, 1, item_based)\n",
     "\n",
     "    algo.fit(trainset)\n",
     "    predictions = algo.test(testset)\n",
@@ -235,9 +235,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The mean value of the results (mean squared errors) is listed above. The values are rather stable and don't vary significantly. They also show a high predict accuracy (high values of mse).\n",
+    "The mean value of the results (mean squared errors) is listed above. The values are rather stable and don't vary significantly. They also show a high predict accuracy (low mse).\n",
     "\n",
-    "The algorithm performs well. Execution of all 5 splits is listed above in the coude output."
+    "The algorithm performs well. It is not fast, but accurate all in all."
    ]
   },
   {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,21 +260,21 @@
      "text": [
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9314\n",
+      "MSE: 0.9148\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9163\n",
+      "MSE: 0.8998\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9214\n",
+      "MSE: 0.9161\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9407\n",
+      "MSE: 0.9152\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9326\n",
-      "Execution time: 17.32087206840515 seconds\n",
-      "Mean mse: 0.9284606293091211\n"
+      "MSE: 0.9049\n",
+      "Execution time: 21.171416521072388 seconds\n",
+      "Mean mse: 0.9101523294562632\n"
      ]
     }
    ],
@@ -287,7 +287,7 @@
     "start_time = time.time()\n",
     "\n",
     "for (trainset, testset) in datasets:\n",
-    "    algo = KNNWithMeans(20, 1, user_based)\n",
+    "    algo = KNNWithMeans(100, 1, user_based)\n",
     "\n",
     "    algo.fit(trainset)\n",
     "    predictions = algo.test(testset)\n",
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The user based approach has a slightly higher mean mse and also performs faster (execution time is lower than with the items based approach)."
+    "The prediction accuracy (slightly higher mean mse) is significantly lower but the execution time is faster."
    ]
   },
   {
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mailb\\AppData\\Local\\Temp/ipykernel_24628/950404129.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "C:\\Users\\mailb\\AppData\\Local\\Temp/ipykernel_18792/950404129.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  algo.fit(trainset)\n"
      ]
@@ -334,12 +334,12 @@
      "output_type": "stream",
      "text": [
       "MSE: 0.9329\n",
-      "MSE: 0.9158\n",
-      "MSE: 0.9244\n",
-      "MSE: 0.9106\n",
-      "MSE: 0.9355\n",
-      "Execution time: 11.120123386383057 seconds\n",
-      "Mean mse: 0.9238492771818676\n"
+      "MSE: 0.9178\n",
+      "MSE: 0.9588\n",
+      "MSE: 0.9441\n",
+      "MSE: 0.9146\n",
+      "Execution time: 11.157257080078125 seconds\n",
+      "Mean mse: 0.9336540574458415\n"
      ]
     }
    ],
@@ -368,7 +368,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm is the most efficient. It takes the least amount of time to generate the model and test. However, it has a similar accuracy to the user based approach."
+    "This algorithm is the most efficient. It takes the least amount of time to generate the model and test. However, it has a worse accuracy than both prior methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All in all it can be stated that the prediction accuracy is stable amon all 5 splits but not very accurate (0.9). However, I am not certain as to where the threashold regarding an acceptable mse value lies. It is clear that the closer to 0 the better. Providing a fixed threshold for mse (e.g. 0.5) where everything below is acceptable seems arbitrary.\n",
+    "\n",
+    "Compared to processing the small datdaset, generating predictions with the large dataset did not yield considerably lower mean squared error values. This is rather surprising since one would expect a larger dataset to provide better models. This did not happen. Only the processing time increased rather massively."
    ]
   }
  ],
