--- a/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_1mDataset.ipynb
+++ b/CollaborativeFiltering/CollaborativeFiltering_se21m003_Goll_1mDataset.ipynb
@@ -20,22 +20,10 @@
     "from surprise import Reader\n",
     "from surprise import Dataset\n",
     "from surprise.model_selection import train_test_split\n",
-    "from surprise.model_selection import split\n",
-    "from surprise import NormalPredictor\n",
-    "from surprise import KNNBasic\n",
     "from surprise import KNNWithMeans\n",
-    "from surprise import KNNWithZScore\n",
-    "from surprise import KNNBaseline\n",
-    "from surprise import SVD\n",
-    "from surprise import BaselineOnly\n",
-    "from surprise import SVDpp\n",
-    "from surprise import NMF\n",
-    "from surprise import SlopeOne\n",
     "from surprise import CoClustering\n",
-    "from surprise.accuracy import rmse\n",
     "from surprise import accuracy\n",
-    "from surprise.model_selection import train_test_split\n",
-    "from surprise.model_selection import GridSearchCV"
+    "from surprise.model_selection import train_test_split"
    ]
   },
   {
@@ -74,33 +62,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>196</td>\n",
-       "      <td>242</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1193</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>186</td>\n",
-       "      <td>302</td>\n",
+       "      <td>1</td>\n",
+       "      <td>661</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>22</td>\n",
-       "      <td>377</td>\n",
        "      <td>1</td>\n",
+       "      <td>914</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>244</td>\n",
-       "      <td>51</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3408</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>166</td>\n",
-       "      <td>346</td>\n",
        "      <td>1</td>\n",
+       "      <td>2355</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -108,11 +96,11 @@
       ],
       "text/plain": [
        "   userId  movieId  rating\n",
-       "0     196      242       3\n",
-       "1     186      302       3\n",
-       "2      22      377       1\n",
-       "3     244       51       2\n",
-       "4     166      346       1"
+       "0       1     1193       5\n",
+       "1       1      661       3\n",
+       "2       1      914       3\n",
+       "3       1     3408       4\n",
+       "4       1     2355       5"
       ]
      },
      "execution_count": 2,
@@ -123,8 +111,8 @@
    "source": [
     "rating_index = [\"userId\", \"movieId\", \"rating\", \"timestamp\"]\n",
     "movie_index = [\"movieId\",\"title\",\"release_date\", \"video_release_dat\", \"IMDb_url\",\"unknown\", \"action\", \"adventure\", \"animation\", \"children\", \"comedy\", \"crime\", \"documentary\", \"drama\", \"fantasy\", \"film-noir\", \"horror\", \"musical\", \"mystery\", \"romance\", \"sci-fi\", \"thriller\", \"war\", \"western\"]\n",
-    "ratings = pd.read_csv(r\"G:\\My Drive\\FH_Technikum\\MSC\\Semester_2_SS2022\\DAS\\Data\\ml-100k\\u.data\", sep=\"\\t\", names=rating_index)\n",
-    "movies = pd.read_csv(r\"G:\\My Drive\\FH_Technikum\\MSC\\Semester_2_SS2022\\DAS\\Data\\ml-100k\\u.item\", sep=\"|\", names=movie_index, encoding='latin-1')\n",
+    "ratings = pd.read_csv(r\"G:\\My Drive\\FH_Technikum\\MSC\\Semester_2_SS2022\\DAS\\Data\\ml-1m\\ratings.dat\", sep=\"::\", names=rating_index, engine=\"python\")\n",
+    "movies = pd.read_csv(r\"G:\\My Drive\\FH_Technikum\\MSC\\Semester_2_SS2022\\DAS\\Data\\ml-1m\\movies.dat\", sep=\"::\", names=movie_index, engine=\"python\", encoding='latin-1')\n",
     "movies = movies.drop([\"release_date\", \"video_release_dat\", \"IMDb_url\",\"unknown\", \"action\", \"adventure\", \"animation\", \"children\", \"comedy\", \"crime\", \"documentary\", \"drama\", \"fantasy\", \"film-noir\", \"horror\", \"musical\", \"mystery\", \"romance\", \"sci-fi\", \"thriller\", \"war\", \"western\"], axis=1)\n",
     "ratings = ratings.drop([\"timestamp\"], axis=1)\n",
     "\n",
@@ -141,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.dataset.DatasetAutoFolds at 0x227c2febe50>"
+       "<surprise.dataset.DatasetAutoFolds at 0x2016e054d90>"
       ]
      },
      "execution_count": 3,
@@ -195,21 +183,21 @@
      "text": [
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9142\n",
+      "MSE: 0.7988\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9091\n",
+      "MSE: 0.7957\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9107\n",
+      "MSE: 0.7989\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9157\n",
+      "MSE: 0.7955\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9108\n",
-      "Execution time: 19.49854016304016 seconds\n",
-      "Mean mse: 0.9120843895897578\n"
+      "MSE: 0.7976\n",
+      "Execution time: 419.0358748435974 seconds\n",
+      "Mean mse: 0.7973270654883968\n"
      ]
     }
    ],
@@ -219,7 +207,7 @@
     "start_time = time.time()\n",
     "\n",
     "for (trainset, testset) in datasets:\n",
-    "    algo = KNNWithMeans(20, 1, item_based)\n",
+    "    algo = KNNWithMeans(40, 1, item_based)\n",
     "\n",
     "    algo.fit(trainset)\n",
     "    predictions = algo.test(testset)\n",
@@ -235,9 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The mean value of the results (mean squared errors) is listed above. The values are rather stable and don't vary significantly. They also show a high predict accuracy (high values of mse).\n",
-    "\n",
-    "The algorithm performs well. Execution of all 5 splits is listed above in the coude output. It was below 20 seconds for the 100k dataset."
+    "MSE values are lower than with the small dataset. However, of course the execution time is rather long (nearly 7 minutes at one time). The values do not vary a lot between splits and kan be determined as stable."
    ]
   },
   {
@@ -260,26 +246,26 @@
      "text": [
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9314\n",
+      "MSE: 0.8843\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9292\n",
+      "MSE: 0.8785\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9272\n",
+      "MSE: 0.8799\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9172\n",
+      "MSE: 0.8797\n",
       "Computing the cosine similarity matrix...\n",
       "Done computing similarity matrix.\n",
-      "MSE: 0.9233\n",
-      "Execution time: 15.89564061164856 seconds\n",
-      "Mean mse: 0.918864230115619\n"
+      "MSE: 0.8798\n",
+      "Execution time: 908.3881342411041 seconds\n",
+      "Mean mse: 0.8804642603023926\n"
      ]
     }
    ],
    "source": [
-    "rmse_results = []\n",
+    "mse_results = []\n",
     "\n",
     "user_based = {'name': 'cosine',\n",
     "               'user_based': True} #defines if user-based filtering or items-based filtering should be used\n",
@@ -287,7 +273,7 @@
     "start_time = time.time()\n",
     "\n",
     "for (trainset, testset) in datasets:\n",
-    "    algo = KNNWithMeans(20, 1, user_based)\n",
+    "    algo = KNNWithMeans(40, 1, user_based)\n",
     "\n",
     "    algo.fit(trainset)\n",
     "    predictions = algo.test(testset)\n",
@@ -303,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The user based approach has a slightly higher mean mse and also performs faster (execution time is lower than with the items based approach)."
+    "As expected, the user based method takes a lot longer. In addition, it does not perform as accurate as the item based approach. Considering the massively increased time and the decreased accuracy, this approach is not optimal."
    ]
   },
   {
@@ -317,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mailb\\AppData\\Local\\Temp/ipykernel_24628/4132256063.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "C:\\Users\\mailb\\AppData\\Local\\Temp/ipykernel_18548/950404129.py:11: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  algo.fit(trainset)\n"
      ]
@@ -333,18 +319,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.9329\n",
-      "MSE: 0.9287\n",
-      "MSE: 0.9519\n",
-      "MSE: 0.9486\n",
-      "MSE: 0.9256\n",
-      "Execution time: 10.747952461242676 seconds\n",
-      "Mean mse: 0.9282104467555625\n"
+      "MSE: 0.8469\n",
+      "MSE: 0.8352\n",
+      "MSE: 0.8358\n",
+      "MSE: 0.8340\n",
+      "MSE: 0.8350\n",
+      "Execution time: 101.9414484500885 seconds\n",
+      "Mean mse: 0.8373902323341371\n"
      ]
     }
    ],
    "source": [
-    "rmse_results = []\n",
+    "mse_results = []\n",
     "\n",
     "user_based = {'name': 'cosine',\n",
     "               'user_based': True} #defines if user-based filtering or items-based filtering should be used\n",
@@ -368,9 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This algorithm is the most efficient and precise one. The mean mse from 5 executions is higher than measured from the prior algorithms used. The execution time is also considerably faster.\n",
-    "\n",
-    "This method/algorithm seems to be the best among the tested."
+    "The mse values for this approach are slightly better than with the user based approach. However, the time to generate and test the model is a quarter compared to the time required with the item based approach and even approximately 1/9 of the time spent to process the user based approach. Even though the mse values are higher than with the items based approach, the considerably faster processing time makes this algorithm very efficient."
    ]
   }
  ],
